<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/details_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="order_id"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_address"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/detaild_order_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="order_address"
        android:textSize="15sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_type"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/details_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="payment_type"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/details_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="status"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/details_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="total"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/details_dismiss_btn"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:text="Dismiss"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>